; ModuleID = '/home/carl/AnghaBench/redis/src/extr_localtime.c_nolocks_localtime.c'
source_filename = "/home/carl/AnghaBench/redis/src/extr_localtime.c_nolocks_localtime.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tm = type { i32, i32, i32, i32, i32, i32, i32, i64, i32 }

@__const.nolocks_localtime.mdays = private unnamed_addr constant [12 x i32] [i32 31, i32 28, i32 31, i32 30, i32 31, i32 30, i32 31, i32 31, i32 30, i32 31, i32 30, i32 31], align 16

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @nolocks_localtime(%struct.tm* %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca %struct.tm*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca [12 x i32], align 16
  store %struct.tm* %0, %struct.tm** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  store i32 60, i32* %9, align 4
  store i32 3600, i32* %10, align 4
  store i32 86400, i32* %11, align 4
  %16 = load i32, i32* %7, align 4
  %17 = load i32, i32* %6, align 4
  %18 = sub nsw i32 %17, %16
  store i32 %18, i32* %6, align 4
  %19 = load i32, i32* %8, align 4
  %20 = mul nsw i32 3600, %19
  %21 = load i32, i32* %6, align 4
  %22 = add nsw i32 %21, %20
  store i32 %22, i32* %6, align 4
  %23 = load i32, i32* %6, align 4
  %24 = sdiv i32 %23, 86400
  store i32 %24, i32* %12, align 4
  %25 = load i32, i32* %6, align 4
  %26 = srem i32 %25, 86400
  store i32 %26, i32* %13, align 4
  %27 = load i32, i32* %8, align 4
  %28 = load %struct.tm*, %struct.tm** %5, align 8
  %29 = getelementptr inbounds %struct.tm, %struct.tm* %28, i32 0, i32 0
  store i32 %27, i32* %29, align 8
  %30 = load i32, i32* %13, align 4
  %31 = sdiv i32 %30, 3600
  %32 = load %struct.tm*, %struct.tm** %5, align 8
  %33 = getelementptr inbounds %struct.tm, %struct.tm* %32, i32 0, i32 1
  store i32 %31, i32* %33, align 4
  %34 = load i32, i32* %13, align 4
  %35 = srem i32 %34, 3600
  %36 = sdiv i32 %35, 60
  %37 = load %struct.tm*, %struct.tm** %5, align 8
  %38 = getelementptr inbounds %struct.tm, %struct.tm* %37, i32 0, i32 2
  store i32 %36, i32* %38, align 8
  %39 = load i32, i32* %13, align 4
  %40 = srem i32 %39, 3600
  %41 = srem i32 %40, 60
  %42 = load %struct.tm*, %struct.tm** %5, align 8
  %43 = getelementptr inbounds %struct.tm, %struct.tm* %42, i32 0, i32 3
  store i32 %41, i32* %43, align 4
  %44 = load i32, i32* %12, align 4
  %45 = add nsw i32 %44, 4
  %46 = srem i32 %45, 7
  %47 = load %struct.tm*, %struct.tm** %5, align 8
  %48 = getelementptr inbounds %struct.tm, %struct.tm* %47, i32 0, i32 4
  store i32 %46, i32* %48, align 8
  %49 = load %struct.tm*, %struct.tm** %5, align 8
  %50 = getelementptr inbounds %struct.tm, %struct.tm* %49, i32 0, i32 5
  store i32 1970, i32* %50, align 4
  br label %51

51:                                               ; preds = %4, %61
  %52 = load %struct.tm*, %struct.tm** %5, align 8
  %53 = getelementptr inbounds %struct.tm, %struct.tm* %52, i32 0, i32 5
  %54 = load i32, i32* %53, align 4
  %55 = call i32 @is_leap_year(i32 %54)
  %56 = add nsw i32 365, %55
  store i32 %56, i32* %14, align 4
  %57 = load i32, i32* %14, align 4
  %58 = load i32, i32* %12, align 4
  %59 = icmp sgt i32 %57, %58
  br i1 %59, label %60, label %61

60:                                               ; preds = %51
  br label %69

61:                                               ; preds = %51
  %62 = load i32, i32* %14, align 4
  %63 = load i32, i32* %12, align 4
  %64 = sub nsw i32 %63, %62
  store i32 %64, i32* %12, align 4
  %65 = load %struct.tm*, %struct.tm** %5, align 8
  %66 = getelementptr inbounds %struct.tm, %struct.tm* %65, i32 0, i32 5
  %67 = load i32, i32* %66, align 4
  %68 = add nsw i32 %67, 1
  store i32 %68, i32* %66, align 4
  br label %51

69:                                               ; preds = %60
  %70 = load i32, i32* %12, align 4
  %71 = load %struct.tm*, %struct.tm** %5, align 8
  %72 = getelementptr inbounds %struct.tm, %struct.tm* %71, i32 0, i32 6
  store i32 %70, i32* %72, align 8
  %73 = bitcast [12 x i32]* %15 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 16 %73, i8* align 16 bitcast ([12 x i32]* @__const.nolocks_localtime.mdays to i8*), i64 48, i1 false)
  %74 = load %struct.tm*, %struct.tm** %5, align 8
  %75 = getelementptr inbounds %struct.tm, %struct.tm* %74, i32 0, i32 5
  %76 = load i32, i32* %75, align 4
  %77 = call i32 @is_leap_year(i32 %76)
  %78 = getelementptr inbounds [12 x i32], [12 x i32]* %15, i64 0, i64 1
  %79 = load i32, i32* %78, align 4
  %80 = add nsw i32 %79, %77
  store i32 %80, i32* %78, align 4
  %81 = load %struct.tm*, %struct.tm** %5, align 8
  %82 = getelementptr inbounds %struct.tm, %struct.tm* %81, i32 0, i32 7
  store i64 0, i64* %82, align 8
  br label %83

83:                                               ; preds = %91, %69
  %84 = load i32, i32* %12, align 4
  %85 = load %struct.tm*, %struct.tm** %5, align 8
  %86 = getelementptr inbounds %struct.tm, %struct.tm* %85, i32 0, i32 7
  %87 = load i64, i64* %86, align 8
  %88 = getelementptr inbounds [12 x i32], [12 x i32]* %15, i64 0, i64 %87
  %89 = load i32, i32* %88, align 4
  %90 = icmp sge i32 %84, %89
  br i1 %90, label %91, label %103

91:                                               ; preds = %83
  %92 = load %struct.tm*, %struct.tm** %5, align 8
  %93 = getelementptr inbounds %struct.tm, %struct.tm* %92, i32 0, i32 7
  %94 = load i64, i64* %93, align 8
  %95 = getelementptr inbounds [12 x i32], [12 x i32]* %15, i64 0, i64 %94
  %96 = load i32, i32* %95, align 4
  %97 = load i32, i32* %12, align 4
  %98 = sub nsw i32 %97, %96
  store i32 %98, i32* %12, align 4
  %99 = load %struct.tm*, %struct.tm** %5, align 8
  %100 = getelementptr inbounds %struct.tm, %struct.tm* %99, i32 0, i32 7
  %101 = load i64, i64* %100, align 8
  %102 = add i64 %101, 1
  store i64 %102, i64* %100, align 8
  br label %83

103:                                              ; preds = %83
  %104 = load i32, i32* %12, align 4
  %105 = add nsw i32 %104, 1
  %106 = load %struct.tm*, %struct.tm** %5, align 8
  %107 = getelementptr inbounds %struct.tm, %struct.tm* %106, i32 0, i32 8
  store i32 %105, i32* %107, align 8
  %108 = load %struct.tm*, %struct.tm** %5, align 8
  %109 = getelementptr inbounds %struct.tm, %struct.tm* %108, i32 0, i32 5
  %110 = load i32, i32* %109, align 4
  %111 = sub nsw i32 %110, 1900
  store i32 %111, i32* %109, align 4
  ret void
}

declare dso_local i32 @is_leap_year(i32) #1

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
